--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,36 @@
-.a{
-  background-color: #caf7e3;
-  height: 200px;
-  width: 200px;
-  border: solid 10px;
-  border-color: black;
-  padding: 20px;
-  mar
+body {
+  background-color: #f8eded;
 }
-body{
-  margin: 0;
-  }
-h1{
-  margin-top: 0;
-}
-.b{
-  margin-left: 260px;
-  height: 200px;
-  width: 200px;
-  border:solid 20px;
-  border-color: black;
-  background-color: gold;
 
+h1 {
+  color: #66BFBF;
 }
-.c{
-  height: 200px;
-  width: 200px;
-  margin-left:500px;
-  border: solid 10px;
-  background-color: cyan;
+
+h3 {
+  text-align: center;
+  color: #66BFBF;
+}
+
+.b {
+  margin-left: auto;
+  margin-right: auto;
+  display: table;
+}
+
+.center {
+  text-align: center;
+  list-style-position: inside;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+hr {
+  border-style: none;
+  border-top-style: dotted;
+  border-width: 7px;
+  width: 5%;
+  border-color: #708090;
 }
